css-loaderの読み込み

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/UCDM/webpack_practice#readme",
   "private": true,
   "devDependencies": {
+    "css-loader": "^3.4.2",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
