--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "pug-html-loader": "^1.1.5",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
